--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,5 @@
- body{
-     color:red;
- }
- h1{
-     color:blue;
- }
- h2{
-     color:green;
- }
- #lib-header{
-     color:orange;
- }
- .para{
-     color:pink;
- }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
