--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 
 :root{
     --primary-color:#6D28D9;
+    --dark-gray:#6B7280;
     ;
 }
 body{
@@ -88,4 +89,24 @@ hr{
 }
 
 
+/* header */
 
+.hero{
+    padding: 2rem;
+}
+
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+
+}
+
+.hero .hero-heading{
+    padding-top: 1rem;
+     color: var(--dark-gray);
+}
+
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color);
+}
