--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 
-:root{
-    --primary-color:#6D28D9;
-    --dark-gray:#6B7280;
+:root {
+    --primary-color: #6D28D9;
+    --dark-gray: #6B7280;
+     --off-white:#F3F4F6;
     ;
 }
-body{
+
+body {
     font-family: 'Montserrat', sans-serif;
 }
 
-hr{
-    margin: 2rem 0rem; /*if only need to increase top and bottom space.*/
+hr {
+    margin: 2rem 0rem;
+    /*if only need to increase top and bottom space.*/
 }
 
 
 /* container */
-.container{
+.container {
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
-.container-center{
+.container-center {
     max-width: 600px;
     margin: auto;
 }
 
 /** links **/
 
-.link{
+.link {
     text-decoration: none;
-    padding: 0.5rem 1rem;     /*if given only 2 values, top & bottom will be same i.e. 0.5rem here and right and left will be 1rem. Top -Right-bottom-left*/
+    padding: 0.5rem 1rem;
+    /*if given only 2 values, top & bottom will be same i.e. 0.5rem here and right and left will be 1rem. Top -Right-bottom-left*/
 }
 
-.link-primary{     /* . : it is used to access the class written after dot.*/
+.link-primary {
+    /* . : it is used to access the class written after dot.*/
     background-color: var(--primary-color);
-    border-radius:0.5rem;
-    color:white;
+    border-radius: 0.5rem;
+    color: white;
 
 }
 
-.link-secondary{
+.link-secondary {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
@@ -53,60 +58,76 @@ hr{
 
 /* Lists */
 
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
 }
 
-.list-item-inline{
+.list-item-inline {
     display: inline;
     padding: 0rem 0.5rem;
 }
 
 /* navigation (nav) */
 
-.navigation{
+.navigation {
     background-color: var(--primary-color);
-    color:white;
+    color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
 
-.navigation .nav-brand{
+.navigation .nav-brand {
     font-weight: bold;
-    font-size: 1.1rem ;
+    font-size: 1.1rem;
 }
 
-.navigation .nav-pills{
+.navigation .nav-pills {
     text-align: right;
 }
 
-.navigation-link{
-    color:white;
+.navigation-link {
+    color: white;
 }
 
-.navigation .link-active{
+.navigation .link-active {
     font-weight: bold;
 }
 
 
 /* header */
 
-.hero{
+.hero {
     padding: 2rem;
 }
 
-.hero .hero-img{
+.hero .hero-img {
     max-width: 350px;
     display: block;
     margin: auto;
 
 }
 
-.hero .hero-heading{
+.hero .hero-heading {
     padding-top: 1rem;
-     color: var(--dark-gray);
+    color: var(--dark-gray);
 }
 
-.hero .hero-heading .heading-inverted{
+.hero .hero-heading .heading-inverted {
     color: var(--primary-color);
+}
+
+
+/* sections */
+
+.section{
+    padding: 2rem;
+
+}
+
+.section h1 {
+    text-align: center;
+    
+}
+.ow{
+    background-color: var(--off-white);
 }
