--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,18 @@ hr {
 .ow{
     background-color: var(--off-white);
 }
+
+
+/* footer */
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color:white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link{
+    color:white;
+}
