--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ hr {
     /*if only need to increase top and bottom space.*/
 }
 
+/* spaces */
+
+.margin-md{
+    margin: 2rem;
+}
 
 /* container */
 .container {
@@ -98,7 +103,7 @@ hr {
 /* header */
 
 .hero {
-    padding: 2rem;
+    padding: 5rem;
 }
 
 .hero .hero-img {
